--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adopt a Buddy</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Website design</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav">
-       
-            <h1 class="logo">Adopt a Buddy</h1>
-        </div>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="cats.html">Cats</a>
-        <a href="dogs.html">Dogs</a>
-        <a href="contact.html">Contact</a>
-    </div>
-    
-</body>
-</html>
+    <div class="main">
+        <div class="navbar">
+              <div class="icon">
+                <h1 class="logo">AdoptABuddy</h1>
+            </div>
+            <div class="menu">
+              <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CATS</a></li>
+                <li><a href="#">DOGS</a></li>
+                <li><a href="#">CONTACT</a></li>
+              </ul>
+            </div>
+            <div class="search">
+              <input class="srch" type="search" name="" placeholder="type to text">
+              <a href="#"><button class="btn">search</button></a>
+            </div>
+            <br><br><br><br><br><br>
+            <div class="content"><br><br>
+              <h2>heling prople find<br><span>a lovely pet</h2>
+              <p class="par">Lorem ipsum dolor sit ameadipisicing elit.<br> unde rem impedit placeat nulla, provident similique harum<br> amet me accusamus quos nihil!
+                <br> Laboriosam nulla nemo impedit? Officia.</p>
+
+                <button class="cn"><a href="#">JOIN US</a></button>
