--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Website design</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Navigation bar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        <div class="navbar">
-              <div class="icon">
-                <h1 class="logo">AdoptABuddy</h1>
-            </div>
-            <div class="menu">
-              <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">CATS</a></li>
-                <li><a href="#">DOGS</a></li>
-                <li><a href="#">CONTACT</a></li>
-              </ul>
-            </div>
-            <div class="search">
-              <input class="srch" type="search" name="" placeholder="type to text">
-              <a href="#"><button class="btn">search</button></a>
-            </div>
-            <br><br><br><br><br><br>
-            <div class="content"><br><br>
-              <h2>heling prople find<br><span>a lovely pet</h2>
-              <p class="par">Lorem ipsum dolor sit ameadipisicing elit.<br> unde rem impedit placeat nulla, provident similique harum<br> amet me accusamus quos nihil!
-                <br> Laboriosam nulla nemo impedit? Officia.</p>
-
-                <button class="cn"><a href="#">JOIN US</a></button>
+  <nav class="navbar">
+    <div class="navdiv">
+    <div class="logo"><a href="#">AdoptABuddy</a></div>
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">ABOUT</a></li>
+      <li><a href="#">DOGS</a></li>
+      <li><a href="#">CATS</a></li>
+      <li><a href="#">CONTACT</a></li>
+      <button><a href="#"></a>SIGN IN</button>
+    </ul>
+    </div>
+    </nav>
+    <div class="background">
+      <img src="background.jpg" alt=""> 
+    </div>
+</body>
+</html>
